fixing some responsive issues on mobile devices

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,3 +1,8 @@
+/* removing ul defaults padding */
+footer ul {
+    padding: 0;
+}
+
 footer {
     width: 100%;
     min-height: 480px;
@@ -5,7 +10,7 @@ footer {
 }
 
 footer .footer-start {
-    padding-top: 100px !important;
+    padding-top: 50px !important;
     border-bottom: 1px solid rgb(156, 181, 224);
     padding-bottom: 25px !important;
 }
@@ -48,5 +53,26 @@ footer .social-links div {
     
     footer .footer-start .col-auto {
         width: 50%;
+    }
+}
+
+@media (max-width: 576px) {
+    footer .footer-start .col-auto {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    footer .social-links {
+        display: flex;
+        justify-content: center;
+    }
+
+    footer .footer-end .text-light h2 {
+        font-size: 27px;
     }
 }
