--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -13,7 +13,7 @@
 }
 
 .product p:first-of-type {
-    width: 500px;
+    width: 80%;
     margin-top: 10px;
     color: rgb(125, 138, 151);
 }
