--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -1,6 +1,6 @@
 .testimonials {
     width: 100%;
-    min-height: 600px;
+    min-height: 730px;
     position: relative;
 }
 
@@ -50,16 +50,16 @@
 }
 
 .testimonials-slides {
-    height: 350px;
+    min-height: 450px;
     /* background-color: rebeccapurple; */
-    margin-top: 60px;
+    margin-top: 130px;
     display: flex;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .testimonials-slides .card {
     width: 580px;
-    height: 250px;
     margin: auto 25px;
     transition: 0.3s;
     text-align: center;
@@ -79,6 +79,12 @@
     color: rgb(125, 138, 151);
 }
 
-@media (max-width: 768px) {
-
+@media (max-width: 992px) {
+    .left-side {
+        left: 10%;
+    }
+    
+    .right-side {
+        right: 10%;
+    }
 }
